--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -226,6 +226,10 @@
 }
 
 @media (max-width: 500px) {
+
+  .my-skills {
+    padding-top: 0;
+  }
   .skills-section-right {
     padding-right: 0;
     padding: 20px;
