--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 body {
-    margin: 0;
-    background-color: #1e2a38;
+  margin: 0;
+  background-color: #141D2F;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
