--- a/src/app/main-content/footer/footer.component.html
+++ b/src/app/main-content/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="footer">
+  <div class="footer-container">
     <div class="footer-left">
       <p class="name">Stavros Nastos</p>
       <a [routerLink]="['impressum']" routerLinkActive="router-link-active" class="impressum-link">Impressum</a>
@@ -18,4 +19,4 @@
       </a>
     </div>
   </div>
-  
+</div>
