--- a/src/app/main-content/header/header.component.scss
+++ b/src/app/main-content/header/header.component.scss
@@ -15,7 +15,7 @@
   width: 100%;
   max-width: 1440px; /* Maximale Breite des Header-Inhalts */
   display: flex;
-  justify-content: space-around; /* Abstand zwischen H1 und Menü */
+  justify-content: space-between; /* Abstand zwischen H1 und Menü */
   align-items: center;
   padding: 0 20px; /* Padding auf beiden Seiten für etwas Abstand */
   height: 109px; /* Höhe des Headers */
