--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -1,15 +1,25 @@
 .privacy {
 
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #141D2F;    
+  width: 100%;
+}
+
+.privacy-container {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: auto;
+  width: 100%;
+  max-width: 1440px;
   background-color: #141D2F;
   color: white;
   font-family: 'Poppins', sans-serif;
   padding: 58px;
-  text-align: start;
+  text-align: left;
 }
 
 h1 {
@@ -19,23 +29,33 @@ h1 {
   font-weight: 700;
 }
 
-/* Header-Styling */
 .header {
-  position: fixed;
-  /* Fixiert den Header am oberen Bildschirmrand */
-  top: 0;
-  left: 0;
-  width: 100vw;
-  /* Volle Breite */
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #141D2F;
+  /* Hintergrundfarbe */
+  overflow: hidden;
+}
+
+/* Header-Styling */
+.header-container {
+  max-width: 1440px;
+  width: 100%;
+  overflow: hidden;
   background-color: #141D2F;
   /* Hintergrundfarbe */
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 109.03px;
   /* Höhe des Headers */
   z-index: 1000;
   /* Stellt sicher, dass der Header über anderen Inhalten liegt */
+  padding: 0 40px;
+  overflow: hidden  ;
 }
 
 .language-toggle {
@@ -86,19 +106,3 @@ h1 {
 
 
 
-
-@media screen and (max-width: 500px) {
-  .header {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    button {
-      margin-left: 0;
-    }
-  }
-
-  .privacy {
-    margin-top: 100px;
-  }
-}
