--- a/src/app/main-content/hero/hero.component.scss
+++ b/src/app/main-content/hero/hero.component.scss
@@ -39,13 +39,13 @@
 
 .vertical-text {
   font-size: 88px;
-  transform: rotate(270deg); /* Dreht den Text um 90 Grad im Uhrzeigersinn */
-  transform-origin: left top; /* Punkt, um den die Drehung erfolgt */
+  transform: rotate(270deg) translateY(50%);
+  
   color: white;
-  margin-top: 379px;
-  margin-right: -93px;
-  font-weight: 400;
+  font-weight: 100;
+  white-space: nowrap; /* Verhindert, dass der Text umbricht */
 }
+
 
 .hero-text {
   color: white;
@@ -54,6 +54,7 @@
   align-items: flex-start;
   justify-content: center;
   margin-top: 65px;
+  gap: 20px;
 }
 
 .hero-text h1 {
@@ -81,6 +82,8 @@
   cursor: pointer;
   transition: background-color 0.3s;
   background-color: #70E61C;
+  align-self: center;
+  margin-right: 100px;
 }
 
 .hero-button:hover {
@@ -121,6 +124,10 @@
 
   .vertical-text {
     display: none;
+  }
+
+  .hero-button {
+    margin-right: 0;
   }
 
   .vector {
